[gd_scene load_steps=4 format=3 uid="uid://ohvpof3mrbma"]

[ext_resource type="Script" uid="uid://fjevlaeo1yqb" path="res://main.gd" id="1_xhtwi"]
[ext_resource type="PackedScene" uid="uid://bkx2nydgmhnop" path="res://Scene/player_field.tscn" id="2_djkur"]
[ext_resource type="PackedScene" uid="uid://36dutrfrtp7d" path="res://Scene/enemy_field.tscn" id="3_djkur"]

[node name="Main" type="Node2D"]
script = ExtResource("1_xhtwi")
player_field_scene = ExtResource("2_djkur")
enemy_field_scene = ExtResource("3_djkur")

[node name="HostButton" type="Button" parent="."]
offset_left = 793.0
offset_top = 419.0
offset_right = 993.0
offset_bottom = 519.0
text = "HOST"

[node name="JoinButton" type="Button" parent="."]
offset_left = 1162.0
offset_top = 419.0
offset_right = 1362.0
offset_bottom = 519.0
text = "JOIN
"

[node name="DeckList" type="VBoxContainer" parent="."]
offset_left = 10.0
offset_top = 28.0
offset_right = 467.0
offset_bottom = 996.0

[node name="LobbyListBackground" type="ColorRect" parent="."]
z_index = -5
offset_left = 559.0
offset_top = 127.0
offset_right = 1565.0
offset_bottom = 806.0
mouse_filter = 2
color = Color(0.45, 0.304875, 0.2565, 1)

[node name="LobbyList" type="VBoxContainer" parent="LobbyListBackground"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DeckListBackground" type="ColorRect" parent="."]
z_index = -5
offset_top = -3.0
offset_right = 523.0
offset_bottom = 1005.0
mouse_filter = 2
color = Color(0.176419, 0.176419, 0.176419, 1)

[connection signal="pressed" from="HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="JoinButton" to="." method="_on_join_button_pressed"]
